Normal user login remake and rest completed